--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,10 @@ spring.application.name=Simple_forum
 server.port=8093
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
-spring.datasource.url=jdbc:mysql://localhost:3306/forum_db
+spring.datasource.url=jdbc:mysql://forum.cluster-cnww8682qneq.eu-north-1.rds.amazonaws.com/forum_db
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=mysql123
+spring.datasource.username=admin
+spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 # Prevent timezone issues (recommended if your DB has date fields)
